# themes

./: .gitignore  README.md  THEME_CLASS_CONTRACT.json  pyproject.toml
docs/: agent-system-prompt.md  foreground-pairing-coding-plan.md  fresh-install-verification.md  handoff-theme-swatch-picker.md  implementation-summary.md  theme-classes-reference.md  theme-swatch-picker.md  theme-system.md  themes-app-agent-handoff.md  themes-app-restructure-coding-plan.md
docs/theme-system/: 01-architecture.md  02-token-naming.md  03-color-roles.md  04-shade-scale.md  05-foreground-pairing.md  06-escape-hatch.md  07-using-in-vue.md  08-extending.md  09-buttons.md  INDEX.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.widget.config.js
frontend/src/: App.vue  main.ts  router.ts  vite-env.d.ts
plans/: REFACTORING_PLAN.md  current-task.md  desk-themes-coding-plan.md  greyscale-coding.md  path-b-coding-instructions.md  phase-b5-results.md  plan-theme-class-prefix.md  plan.md  rename-base-theme-field-to-default.md  theme-preview-modernization.md
scripts/: export_theme_tokens.py  run_tests.sh
themes/: CODE_INDEX.json  api.py  boot.py  hooks.py  init_desk_theme.py  init_theme.py  install.py  patches.txt  verify_fresh_install.py  workspace_fix.py
themes/data/: base_desk_theme.json  base_theme.json
themes/services/: css_publish.py
themes/tests/: frappe_stub.py  test_api_contract.py  test_color_math_parity.py  test_css_snapshots.py  test_theme_service_default.py  test_token_contract_export.py
themes/utils/: css_publish.py  (+14 more)
(+188 files in other folders)
