[project]
name = "themes"
authors = [
    { name = "Oliver Reid", email = "oliver_reid@me.com" }
]
description = "Themes — Site-wide theming for Frappe"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
